--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,11 @@
     <script src="js/app.router.music.js"></script>
     -->
 
+	
+	<!-- Added Manually -->
+	
+	<script src="../node_modules/angular-utils-pagination/dirPagination.js" type="text/javascript"></script>
+	
 
 
     <script src="js/app.main.js"></script>
