--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,8 @@
 	<!-- Added Manually -->
 	
 	<script src="../node_modules/angular-utils-pagination/dirPagination.js" type="text/javascript"></script>
-	
+	<script src="http://cdn.jsdelivr.net/alasql/0.3/alasql.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.10.8/xlsx.core.min.js"></script>
 
 
     <script src="js/app.main.js"></script>
