--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
 	<script src="http://cdn.jsdelivr.net/alasql/0.3/alasql.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.10.8/xlsx.core.min.js"></script>
 
-	<script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
+	<script src="//maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyBxEQxjyg5aCInGf8NezA5mlGDDASWJ_qs"></script>
 	<script src="../node_modules/angular-google-maps/dist/angular-google-maps.js" type="text/javascript"></script>
 	
 	
