--- a/app/index.html
+++ b/app/index.html
@@ -74,11 +74,11 @@
 	
 	<!-- Added Manually -->
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
-	<script src="http://rawgit.com/nmccready/angular-simple-logger/master/dist/angular-simple-logger.js"></script>
+	<script src="https://rawgit.com/nmccready/angular-simple-logger/master/dist/angular-simple-logger.js"></script>
 
 	
 	<script src="../node_modules/angular-utils-pagination/dirPagination.js" type="text/javascript"></script>
-	<script src="http://cdn.jsdelivr.net/alasql/0.3/alasql.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/alasql/0.3/alasql.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.10.8/xlsx.core.min.js"></script>
 
 	<script src="//maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyBxEQxjyg5aCInGf8NezA5mlGDDASWJ_qs"></script>
