--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="AngularJs Bootstrap Admin Theme, Angular, Admin, Admin theme">
     <meta name="keywords" content="AngularJS" , "admin", "widgets", "admin panel", "flat ui", "ui", "web app", "app", "backend", "angular", "dashboard", "bootstrap", "charts", "ui kit", "responsive" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- Favicon -->
     <!-- CSS FRAMEWORK - START -->
     <link rel='stylesheet' href='../bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
