--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,8 @@
 	<script type="text/javascript" src="../node_modules/auth0-js/build/auth0.js"></script>
 	<script type="text/javascript" src="../node_modules/angular-auth0/dist/angular-auth0.js"></script>
 	
+	<script src="js/controllers/Custom/jsonsql-0.1.js"></script>
+	
 
     <script src="js/app.main.js"></script>
     <!-- App JS - End -->
